[package]
edition = "2021"
name = "grafana-to-ntfy"
rust-version = "1.75.0"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
lazy_static = "1.5.0"
reqwest = { version = "0.12.21", default-features = false, features = [
    "http2",
    "rustls-tls-native-roots",
] }
rocket = { version = "0.5.1", features = ["json"] }
