[package]
edition = "2021"
name = "grafana-to-ntfy"
rust-version = "1.80.0"
version = "2026.3.15"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
reqwest = { version = "0.13.2", default-features = false, features = [
    "http2",
    "rustls",
] }
rocket = { version = "0.5.1", features = ["json"] }
sha2 = "0.10"
subtle = "2"
