[package]
edition = "2021"
name = "grafana-to-ntfy"
rust-version = "1.80.0"
version = "2026.4.29"
license = "AGPL-3.0-only"

[dependencies]
base64 = "0.22.1"
dotenvy = "0.15.7"
reqwest = { version = "0.13.3", default-features = false, features = [
    "http2",
    "rustls",
] }
rocket = { version = "0.5.1", features = ["json"] }
sha2 = "0.11"
subtle = "2"
